finally fixed damn login links overlap
git-svn-id: https://plugins.svn.wordpress.org/somatic-framework/tags/1.8.3@766068 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/soma-login-styles.css
+++ b/css/soma-login-styles.css
@@ -1,6 +1,3 @@
-/* @override 
-	http://sleepthiefmusic.com/wp-content/plugins/somatic-framework/css/soma-login-styles.css?ver=1.6 */
-
 #login {
 	z-index: 100;
 }
@@ -23,15 +20,12 @@ body.login #loginform {
 }
 
 body.login #nav {
-	position: absolute;
-	right: 0;
-    padding-right: 0;
+	text-align: center;
+	margin-left: 0;
 }
 
 body.login #backtoblog {
-	position: absolute;
-	left: 0;
-    padding-left: 0;
+	text-align: center;
     margin-left: 0;
 }
 
